--- a/style.css
+++ b/style.css
@@ -1,10 +1,26 @@
 body {
     background-color: #ffe5be;
+    font-family: 'Courier New', Courier, monospace;
 }
+
+h1,
+h2,
+.intro,
+.intro.second {
+    font-family: Georgia, 'Times New Roman', Times, serif;
+}
+
 
 h1 {
     color: #ca431d;
     text-align: center;
+    font-size: 40px;
+   }
+
+h2,
+.intro
+{
+    color: #520556;
 }
 
 img {
